# to-trash

./: Cargo.toml  README.md
.github/workflows/: check_and_test.yml
src/: directorysizes.rs  error.rs  ffi.rs  fs.rs  home_dir.rs  info_file.rs  light_fs.rs  main.rs  tests.rs  trash.rs
src/ffi/: getpwuid.rs  lstat.rs  mount_point.rs  time.rs
