[package]
name = "tt"
version = "0.1.0"
edition = "2021"
authors = ["Vinícius R. Miguel <vrmiguel99@gmail.com>",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.9"
uuid = { version = "0.8.2", features = ["v4"] }
libc = "0.2.112"
thiserror = "1.0.30"
unixstring = "0.2.7"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.3.0"
chrono = "0.4.19"
rand = { version = "0.8.4", default-features = false, features = ["small_rng", "std"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3